lab05/examples/app-service-02.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-2
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx-2
