lab05/examples/app-ingress-02.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-2
  annotations:
    # spec.ingressClassName: azure/application-gateway
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-2
            port:
              number: 8080
